@@ -1,5 +1,6 @@
 Changes for 1.3.1:
 
+ - fixed permission system (Eugene)
  - added availability of multiple user groups selection (Eugene)
  - fixed screens displaying (Eugene)
  - fixed updating of hosts (Eugene)
